fix: fix navbar z-index and scroll error

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -3,6 +3,7 @@
 .main-content {
   display: flex;
   justify-content: center;
+  z-index: 10;
 }
 
 .navbar-desktop {
@@ -15,7 +16,7 @@
   padding: 10px 20px;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   border-bottom: 1px solid #8C8C8C;
 }
 
@@ -78,10 +79,10 @@
   }
 
   .movile-navbar {
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     transform: translateX(-100%);
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     background-color: black;
